[package]
name = "algonaut_CRATE"
version = "0.0.1"
edition = "2018"
authors = ["Manuel Mauro <manuel.mauro@protonmail.com>"]
repository = "https://github.com/manuelmauro/algonaut-crate-reservations"
description = "This crate is reserved for the Algonaut project"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
